+Video ice nature

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FTDiam - Flawless Technical Diamonds. Single Crystal Diamond Substrates with Unmatched Characteristics." />
-    <title>FTDiam - Flawless Technical Diamonds</title>
+    <meta name="description" content="FTDiam - Синтетические алмазы высокого качества для промышленности и ювелирного дела" />
+    <meta name="keywords" content="алмазы, синтетические алмазы, бриллианты, CVD алмазы, HPHT алмазы" />
+    <meta name="author" content="FTDiam" />
+    <title>FTDiam</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div id="root"></div>
