--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./ico.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./ico.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="FTDiam - Revolutionary Single-Crystal Diamond Technology" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description" content="Flawless Technical Diamonds - Revolutionary Single-Crystal Diamond Technology" />
+  <link rel="apple-touch-icon" href="./ico.ico" />
   <!-- Font Awesome для иконок -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>FTDiam - Single-Crystal Diamond</title>
+  <title>Flawless Technical Diamonds</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
