--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="FTDiam - Синтетические алмазы высокого качества для промышленности и ювелирного дела" />
     <meta name="keywords" content="алмазы, синтетические алмазы, бриллианты, CVD алмазы, HPHT алмазы" />
     <meta name="author" content="FTDiam" />
-    <title>FTDiam</title>
+    <title>Flawless Technical Diamonds</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
