--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   <link rel="icon" href="ico.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Flawless Technical Diamonds - Revolutionary Single-Crystal Diamond Technology" />
+  <meta name="description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
+  <meta property="og:description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
+  <meta name="twitter:description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
   <link rel="apple-touch-icon" href="ico.ico" />
   <!-- Font Awesome для иконок -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
