Updated IntroSection with dark elegant background

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,18 @@
   <meta name="description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
   <meta property="og:description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
   <meta name="twitter:description" content="Flawless Technical Diamonds - Advanced HPHT technology for cutting-edge applications" />
-  <link rel="apple-touch-icon" href="ico.ico" />
+  <meta property="og:image" content="favicon.png" />
+  <meta name="twitter:image" content="favicon.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Необходимо для работы FormSubmit.co -->
+  <meta name="referrer" content="origin">
   <!-- Font Awesome для иконок -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
   <script>
     // Принудительно установить заголовок страницы
     document.title = "Flawless Technical Diamonds";
