--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       "description": "Advanced HPHT technology for cutting-edge applications in diamond synthesis and manufacturing."
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CWPWJJKSBY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CWPWJJKSBY');
+    </script>
   </head>
   <body>
     <div id="root"></div>
